--- a/1.1 Authentication.md
+++ b/1.1 Authentication.md
@@ -3,9 +3,9 @@
 
 > In this lesson you will learn how to obtain permission to request data from the API. Before starting this lesson, be sure that you have an aWhere account set up at www.developer.awhere.com
 
-<p> This tutorial is constructed in a statistical programming language called "R". It is not necessary to know R in order to complete the tutorial, however some background knowledge can help users advance to more complicated API functions.</p>
+<p> This tutorial is constructed in a statistical programming language called R. It is not necessary to know R in order to complete the tutorial, however some background knowledge can help users advance to more complicated API functions.</p>
 
-<p> To begin, you will first load some pre-configured batches of R code called "packages". The two packages you will load - **httr** and **RCurl** - are standard for R users interacting with APIs, they provide generic pre-made commands that help with the tasks of authenticating, requesting, and interpreting data.</p>
+<p> To begin, you will first load some pre-configured batches of R code called "packages". The two packages you will load - <b>httr</b> and <b>RCurl</b> - are standard for R users interacting with APIs, they provide generic pre-made commands that help with the tasks of authenticating, requesting, and interpreting data.</p>
 
 
 ```R
@@ -52,7 +52,10 @@ library(RCurl)
     Warning message:
     : package ‘bitops’ was built under R version 3.2.4
 
+___
+
 <p>Before you can request any data from the API, you must first send it your credentials for authentication. Your aWhere account gives you unique access credentials, called a "Key" and "Secret" (essentially a user ID and password). The code below stores your credentials as two variables, *api_key* and *api_secret*.</p>
+
 
 
 ```R
@@ -61,6 +64,8 @@ api_key = "yizhexu@awhere.com"
 api_secret = "********"
 ```
 
+___
+
 <p>When you send a request to the API, you will need a specific URL (called an "endpoint") to direct the request. The endpoint you will use for this lesson is stored below in *api_endpoint*.</p>
 
 
@@ -68,6 +73,7 @@ api_secret = "********"
 api_endpoint <- "https://api.awhere.com/oauth/token"
 ```
 
+___
 <p>Requests sent to the API are often referred to as "calls". The command for this call is POST(), a standard HTTP command used in interacting with APIs.</p>
 
 
@@ -80,6 +86,7 @@ request <- POST(api_endpoint,
                 add_headers(Authorization = paste0('Basic ',base64(paste0(api_key,':',api_secret)))))
 ```
 
+___
 <p>Once the above call has been executed, we can print the response by simple typing the variable name, *request*. An important piece of information we are looking for is the status code. Status: 200 is a standard HTTP code to indicate your call was successful. There are many other possible HTTP codes you may receive, you can consult the list <a href="https://en.wikipedia.org/wiki/List_of_HTTP_status_codes">here</a> for help.</p>
 
 
@@ -102,7 +109,7 @@ request
 
 
 
-
+___
 <p>It is important to understand that the above information (the date, status, content-type, and file size of the call) is not the whole of the response you received to your call. It is simply metadata. If your account is current and authorized, the API will also return to you a 16-digit code called a "token". This token is temporary, the variable *expire_time* shows you how long you may make requests using that token.</p>
 
 
@@ -117,7 +124,7 @@ expire_time
     [1] "2016-04-07 09:32:38 MDT"
 
 
-
+___
 <p>Think of your key and secret like your bank account and PIN number, and each token like a movie ticket. Even though your bank account and PIN number remain the same, each movie ticket is valid only for a certain time.</p>
 
 <p>For ease of reference, the code below stores the token in a variable called *access_token*, with the format "Bearer [token]". The Out[8] line shows what a valid token looks like. We will examine the content() command in a future lesson.</p>
@@ -134,7 +141,7 @@ access_token
 'Bearer 7PC9CXEevjK0uKTAL3EhMVWXVThV'
 
 
-
+___
 <p>Now that you understand the mechanics of entering your credentials and retrieving a token in R, the above code demonstrates a shortcut using aWhere's custom API package, called "aWhereAPI". Remember that you previously stored your access credentials in two variables called *api_key* and *api_secret*. After loading the aWhereAPI package, you can use one command - GetAccessToken() - to do everything that we did with the POST command above.</p>
 
 
@@ -151,6 +158,7 @@ suppressWarnings(suppressPackageStartupMessages(library(aWhereAPI)))
 aWhereAPI::get_token(api_key, api_secret)
 ```
 
+___
 <p>The aWhereAPI package combines the api_key, api_secret, and token into an environment ("environment" refers to a distinct memory space in which R stores variables, functions, lists, datasets, and other objects) called awhereEnv75247. If your token expires later, the aWhereAPI R package will automatically use given api_key and secret to renew the token. The code below prints out the token.</p>
 
 
@@ -163,6 +171,6 @@ paste0("Bearer ", awhereEnv75247$token)
 
 'Bearer gI7ZcsadJmnbLlohWtluqrdTFCG7'
 
-
+___
 
 <p>If you would like to learn more about R before you advance to the next lessons, you can start with the <a href="https://cran.r-project.org/doc/manuals/R-intro.pdf">Intro to R</a> document, or one of the <a href="http://swirlstats.com/">interactive</a> <a href="https://www.datacamp.com/courses/free-introduction-to-r">tutorials</a> available online.</p>
