Update 5.3 Get Model Details.md

--- a/5.3 Get Model Details.md
+++ b/5.3 Get Model Details.md
@@ -1,7 +1,7 @@
 
 <h1>Get Details on a Particular Model</h1>
 
->To know how to use a model, you will need more details than the metadata. This lesson describes the process for retrieving the parameters of a particular model.
+>To know how to use a model, you will need as much detailed metadata as possible. This lesson describes the process for retrieving the parameters of a particular model.
 
 
 ```R
