Update 5.4 Get Model Results.md

--- a/5.4 Get Model Results.md
+++ b/5.4 Get Model Results.md
@@ -128,4 +128,4 @@ request$previousStages %>% jsonlite::toJSON(pretty = TRUE) %>% jsonlite::fromJSO
 
 ___
 
-<p>For help interpreting the model results, refer to the API documentation available [here](http://developer.awhere.com/api/reference/models/results), or refer to the metadata about the model to find further scientific documentation.</p>
+<p>For help interpreting the model results, refer to the API documentation available <a href="http://developer.awhere.com/api/reference/models/results">here</a>, or refer to the metadata about the model to find further scientific documentation.</p>
