--- a/1.1 Authentication.md
+++ b/1.1 Authentication.md
@@ -3,7 +3,7 @@
 
 > In this lesson you will learn how to obtain permission to request data from the API. Before starting this lesson, be sure that you have an aWhere account set up at www.developer.awhere.com
 
-<p> This tutorial is constructed in a statistical programming language called R. It is not necessary to know R in order to complete the tutorial, however some background knowledge can help users advance to more complicated API functions.</p>
+<p> This tutorial is constructed in a statistical programming language called R. It is not necessary to be an advanced user of R to complete the tutorial, however some background knowledge is required to understand the steps. If you would like to learn about R before you start the tutorial, you can start with the <a href="https://cran.r-project.org/doc/manuals/R-intro.pdf">Intro to R</a> document, or one of the <a href="http://swirlstats.com/">interactive</a> <a href="https://www.datacamp.com/courses/free-introduction-to-r">tutorials</a> available online.</p>
 
 <p> To begin, you will first load some pre-configured batches of R code called "packages". The two packages you will load - <b>httr</b> and <b>RCurl</b> - are standard for R users interacting with APIs, they provide generic pre-made commands that help with the tasks of authenticating, requesting, and interpreting data.</p>
 
@@ -171,6 +171,3 @@ paste0("Bearer ", awhereEnv75247$token)
 
 'Bearer gI7ZcsadJmnbLlohWtluqrdTFCG7'
 
-___
-
-<p>If you would like to learn more about R before you advance to the next lessons, you can start with the <a href="https://cran.r-project.org/doc/manuals/R-intro.pdf">Intro to R</a> document, or one of the <a href="http://swirlstats.com/">interactive</a> <a href="https://www.datacamp.com/courses/free-introduction-to-r">tutorials</a> available online.</p>
